--- a/.settings/de.innot.avreclipse.core.prefs
+++ b/.settings/de.innot.avreclipse.core.prefs
@@ -1,4 +1,4 @@
-#Sun Dec 25 03:47:14 PST 2011
+#Sun Apr 29 19:00:11 PDT 2012
 avrtarget/ClockFrequency=18432000
 avrtarget/ExtRAMSize=0
 avrtarget/ExtendedRAM=false
@@ -11,17 +11,12 @@ avrtarget/avrdude/EEPROMFile=
 avrtarget/avrdude/EEPROMFromConfig=true
 avrtarget/avrdude/FlashFile=
 avrtarget/avrdude/FlashFromConfig=true
-avrtarget/avrdude/Fuses/ByteValues=-1\:-1\:-1
-avrtarget/avrdude/Fuses/FileName=
-avrtarget/avrdude/Fuses/MCUid=atmega644p
-avrtarget/avrdude/Fuses/UseFile=false
-avrtarget/avrdude/Fuses/Write=true
 avrtarget/avrdude/NoChipErase=false
 avrtarget/avrdude/NoSigCheck=false
 avrtarget/avrdude/NoVerify=false
 avrtarget/avrdude/NoWrite=false
 avrtarget/avrdude/OtherOptions=
-avrtarget/avrdude/ProgrammerID=programmerconfig.2
+avrtarget/avrdude/ProgrammerID=programmerconfig.3
 avrtarget/avrdude/UseCounter=false
 avrtarget/avrdude/WriteEEPROM=false
 avrtarget/avrdude/WriteFlash=true
